# Xaytex-Staff-Dashboard

./: .linter.yml  Cargo.toml  Dockerfile  LICENSE  README.md  config.yml  dashboard.env  password.env
Dashboard/: Cargo.toml  config.yml  test.txt
Dashboard/src/: main.rs
dashboard/: Cargo.toml
dashboard/src/: contributor.rs  db.rs  main.rs
dashboard/src/data/database/: db.rs
dashboard/src/infrastructure/: mod.rs
dashboard/src/infrastructure/logging/: error.rs  logging.rs
dashboard/src/infrastructure/server/: server.rs
dashboard/src/widgets/gui/: widget.rs
src/: contributor.rs  main.rs  tcp.rs
src/application/: heartbeat.rs  mod.rs
src/data/data/: data.rs
src/data/database/: db.rs
src/infastructure/logging/: logger.rs
workflows/: rust.yml
