[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"
authors = ["<Xaytex-Development-Team>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

iced = "0.3.0"
druid = "0.7.0"

[dependencies.sqlite]
version = "0.26.0"

[dependencies.serde]
version = "1.0.132"
