[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"
authors = ["<Xaytex-Development-Team>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures = "0.3.19"
dotenv = "0.15.0"
hyper = "0.14.16"
snafu = "0.7.0"
tokio = "1.16.1"
tower = "0.4.11"