[package]
name = "System"
authors = ["<Xaytex-Development-Team>"]
version = "0.0.1"
edition = "2021"
homepage = "https://www.xaytex.com"
description = "It's a Xaytex Dashboard for each Projekt and each person. You can control everythig from here."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_widgets = "0.5.0"
qt_ui_tools = "0.5.0"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[dependencies.rusqlite]
version = "0.26.0"
features = ["bundled"]
