[package]
name = "System"
authors = ["<Xaytex-Development-Team>"]
version = "0.0.1"
edition = "2021"
homepage = "https://www.xaytex.com"
description = "It's a Xaytex Dashboard for each Projekt and each person. You can control everythig from here."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[dependencies.sqlite]
version = "0.26.0"
