[package]
name = "System"
authors = ["<Xaytex-Development-Team>"]
version = "0.0.1"
edition = "2021"
homepage = "https://www.xaytex.com"
description = "It's a Xaytex Dashboard for each Projekt and each person. You can control everythig from here."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

clap = "2.33.0"

structopt = { version = "0.3", default-features = false }

[dependencies.sqlite]
version = "0.26.0"
