[package]
name = "System"
authors = ["<Xaytex-Development-Team>"]
version = "0.0.1"
edition = "2021"
homepage = "https://www.xaytex.com"
description = "It's a Xaytex Dashboard for each Projekt and each person. You can control everythig from here."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

actix-web = "0.7.19"

websocket = "0.20.2"

firebase = { git = "https://github.com/Phrohdoh/firebase-rs" }

url = "1.2.1"

hyper = "0.10"

hyper-openssl = "0.2"

rustc-serialize = "0.3.19"

serde_derive = "1.0"

serde_json = "1.0.18"

[dependencies.sqlite]
version = "0.26.0"
